--- a/templates/dovecot/extra.conf
+++ b/templates/dovecot/extra.conf
@@ -2,3 +2,11 @@ passdb {
   args = /etc/dovecot/ldap/passdb.conf
   driver = ldap
 }
+
+namespace {
+  type = public
+  separator = /
+  prefix = Public/
+  location = maildir:/var/vmail/public:INDEXPVT=~/public
+  subscriptions = yes
+}
