--- a/templates/dovecot/ldap/passdb.conf
+++ b/templates/dovecot/ldap/passdb.conf
@@ -7,5 +7,5 @@ dn = $ldap_bind_dn
 dnpass = $ldap_bind_dn_password
 pass_attrs = =user=%{ldap:mail}
 #pass_filter = (|(mail=%u)(samaccountname=%u))
-pass_filter = (mail=%u)
+pass_filter = (mailPrimaryAddress=%u)
 user_attrs = =user=%{ldap:mail}
